<resources>
    <string name="app_name">MADLevel1Task2</string>
    <string name="appHeader">Conjunction (AND)</string>
    <string name="tvA">A</string>
    <string name="tvB">B</string>
    <string name="tvT">T</string>
    <string name="tvF">F</string>
    <string name="tvAB">A ^ B</string>
    <string name="btnSubmit">Submit</string>
    <string name="myAlphaNumeric">TF</string>
    <string name="TorF">T or F</string>
</resources>